--- a/tsconfig.json
+++ b/tsconfig.json
@@ -47,6 +47,6 @@
     "esModuleInterop": true,
     "declarationDir": "dist"
   },
-  "include": ["src"],
+  "include": ["src", "types.d.ts"],
   "exclude": ["dist"]
 }
