Add src/styles.d.ts to define module declarations for styles and css exports

--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "style": "dist/tailwind.css",
   "files": [
     "dist",
-    "types.d.ts"
+    "types.d.ts",
+    "src/styles.d.ts"
   ],
   "exports": {
     ".": {
