--- a/package.json
+++ b/package.json
@@ -27,14 +27,40 @@
   "scripts": {
     "build": "tsup && postcss ./src/styles/dialcaui.css -o ./dist/dialcaui.css && copy src\\styles.d.ts dist\\styles.d.ts",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "vite"
+    "dev": "vite",
+    "patch": "npm version patch && npm publish --access public"
   },
   "peerDependencies": {
     "react": ">=18.0.0",
     "react-dom": ">=18.0.0",
     "react-icons": ">=5.5.0"
   },
-  "keywords": [],
+  "keywords": [
+    "react",
+    "tailwindcss",
+    "typescript",
+    "ts",
+    "ui",
+    "components",
+    "component-library",
+    "frontend",
+    "design-system",
+    "loader",
+    "spinner",
+    "dropzone",
+    "drag-and-drop",
+    "file-upload",
+    "form",
+    "input",
+    "textarea",
+    "select",
+    "radio",
+    "char-counter",
+    "counter",
+
+    "dialca-ui",
+    "dialca"
+  ],
   "author": "dialcaDev",
   "license": "ISC",
   "devDependencies": {
