--- a/web/package.json
+++ b/web/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@tailwindcss/vite": "4.1.17",
     "axios": "1.13.2",
+    "motion": "12.23.24",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-icons": "5.5.0",
@@ -28,6 +29,7 @@
     "eslint-plugin-react-hooks": "5.2.0",
     "eslint-plugin-react-refresh": "0.4.24",
     "globals": "16.5.0",
+    "tailwind-scrollbar": "4.0.2",
     "typescript": "~5.9.3",
     "typescript-eslint": "8.46.3",
     "vite": "7.2.2"
