feat: update homepage URL in package.json to point to the live site

--- a/package.json
+++ b/package.json
@@ -103,5 +103,5 @@
   "bugs": {
     "url": "https://github.com/Diego17cp/dialca-ui/issues"
   },
-  "homepage": "https://github.com/Diego17cp/dialca-ui#readme"
+  "homepage": "https://dialca-ui.vercel.app"
 }
